Actualizar retirodedivisas.html

--- a/retirodedivisas.html
+++ b/retirodedivisas.html
@@ -293,7 +293,8 @@
         <hr style="border-color:#4d46a7;">
         <input type="number" id="currency-key" placeholder="Clave divisa 🔑" aria-label="Clave de divisa" oninput="selectCurrencyByKey()" />
         <div id="currency-key-error" class="error-message hidden">Clave de divisa no válida.</div>
-        <input type="text" id="buscadorDivisas" placeholder="Buscar divisa...">
+        <input type="text" id="buscadorDivisas" placeholder="Buscar divisa..." list="listaDivisas">
+        <datalist id="listaDivisas"></datalist>
         <select id="currency" aria-label="Seleccione una divisa" onchange="updateCurrencyKey()">
             <option value="">--- Seleccione una divisa ---</option>
             <!-- PRIMERO: Moneda Nacional y las más usadas -->
