--- a/Principal.html
+++ b/Principal.html
@@ -7,7 +7,7 @@
     <style>
         /* Estilos generales */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
@@ -15,9 +15,48 @@
             overflow-x: hidden;
         }
 
+        /* Navbar */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #ffffff;
+            padding: 10px 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar .logo {
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #4CAF50;
+        }
+
+        .navbar ul {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar ul li a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+
+        .navbar ul li a:hover {
+            color: #4CAF50;
+        }
+
+        /* Header */
         header {
             text-align: center;
-            padding: 20px;
+            padding: 50px 20px;
             background-color: #4CAF50;
             color: white;
             position: relative;
@@ -26,9 +65,11 @@
 
         h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 3em;
+            font-weight: 700;
         }
 
+        /* Contenedor de proyectos */
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -77,6 +118,21 @@
             margin: 0;
         }
 
+        /* Footer */
+        footer {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: relative;
+            z-index: 1;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 1em;
+        }
+
         /* Fondo con efecto de desenfoque */
         .background-blur {
             position: fixed;
@@ -94,6 +150,11 @@
             .project-card {
                 width: 100%;
             }
+
+            .navbar ul {
+                flex-direction: column;
+                gap: 10px;
+            }
         }
     </style>
 </head>
@@ -101,11 +162,24 @@
     <!-- Fondo con efecto de desenfoque -->
     <div class="background-blur"></div>
 
-    <header>
-        <h1>Mis Proyectos</h1>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="logo">MisProyectos</div>
+        <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#proyectos">Proyectos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <!-- Header -->
+    <header id="inicio">
+        <h1>Bienvenido a Mis Proyectos</h1>
+        <p>Explora mis trabajos y descubre lo que puedo ofrecer.</p>
     </header>
 
-    <div class="container">
+    <!-- Contenedor de proyectos -->
+    <div class="container" id="proyectos">
         <!-- Ejemplo de un proyecto -->
         <div class="project-card">
             <img src="https://via.placeholder.com/300x200" alt="Proyecto 1">
@@ -126,6 +200,11 @@
 
         <!-- Agrega más proyectos aquí -->
     </div>
+
+    <!-- Footer -->
+    <footer id="contacto">
+        <p>&copy; 2023 MisProyectos. Todos los derechos reservados.</p>
+    </footer>
 
     <script>
         // JavaScript para animaciones adicionales
