--- a/Principal.html
+++ b/Principal.html
@@ -7,10 +7,10 @@
     <style>
         /* Estilos generales */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #f5f5f7; /* Color de fondo iOS */
             color: #333;
             overflow-x: hidden;
         }
@@ -22,7 +22,7 @@
             align-items: center;
             background-color: #ffffff;
             padding: 10px 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -31,7 +31,7 @@
         .navbar .logo {
             font-size: 1.5em;
             font-weight: bold;
-            color: #4CAF50;
+            color: #007aff; /* Azul característico de iOS */
         }
 
         .navbar ul {
@@ -44,20 +44,20 @@
 
         .navbar ul li a {
             text-decoration: none;
-            color: #333;
+            color: #007aff; /* Azul característico de iOS */
             font-weight: 500;
             transition: color 0.3s ease;
         }
 
         .navbar ul li a:hover {
-            color: #4CAF50;
+            color: #005bb5; /* Azul oscuro al pasar el mouse */
         }
 
         /* Header */
         header {
             text-align: center;
             padding: 50px 20px;
-            background-color: #4CAF50;
+            background-color: #007aff; /* Azul característico de iOS */
             color: white;
             position: relative;
             z-index: 1;
@@ -80,7 +80,7 @@
         }
 
         .project-card {
-            background-color: rgba(255, 255, 255, 0.8); /* Transparencia */
+            background-color: rgba(255, 255, 255, 0.9); /* Transparencia */
             border-radius: 16px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             margin: 10px;
@@ -111,16 +111,18 @@
         .project-description h2 {
             font-size: 1.5em;
             margin: 0 0 10px;
+            color: #007aff; /* Azul característico de iOS */
         }
 
         .project-description p {
             font-size: 1em;
             margin: 0;
+            color: #6e6e73; /* Gris claro iOS */
         }
 
         /* Footer */
         footer {
-            background-color: #4CAF50;
+            background-color: #007aff; /* Azul característico de iOS */
             color: white;
             text-align: center;
             padding: 20px;
