Actualizar Principal.html

--- a/Principal.html
+++ b/Principal.html
@@ -234,6 +234,12 @@
                 image: "https://source.unsplash.com/random/800x600?tech,1",
                 link: "#"
             },
+            {
+                title: "Proyecto 2",
+                description: "Descripción breve del proyecto innovador desarrollado.",
+                image: "https://source.unsplash.com/random/800x600?tech,1",
+                link: "#"
+            },
             // Agrega más proyectos aquí
         ];
 
