--- a/Principal.html
+++ b/Principal.html
@@ -349,7 +349,7 @@
             }
         });
 
-        // Iconos Font Awesome (reemplaza 'your-kit-code' con tu código real)
+        // Iconos dFont Awesome (reemplaza 'your-kit-code' con tu código real)
         const faScript = document.createElement('script');
         faScript.src = 'https://kit.fontawesome.com/your-kit-code.js';
         faScript.crossOrigin = 'anonymous';
