--- a/Principal.html
+++ b/Principal.html
@@ -93,7 +93,7 @@
             border-radius: 50%;
             transition: all 0.3s ease;
             display: flex;
-            align-items: center;
+            align-items: left;
             justify-content: center;
             width: 40px;
             height: 40px;
