--- a/Principal.html
+++ b/Principal.html
@@ -190,7 +190,7 @@
         }
 
         .hero {
-            padding: 120px 2rem 60px;
+            padding: 60px 2rem 60px;
             text-align: center;
             opacity: 0;
             animation: fadeInUp 0.8s ease-out 0.6s forwards;
@@ -356,7 +356,7 @@
                 <input type="checkbox">
                 <span class="switch-slider"></span>
             </label>
-            <div class="navbar-logo">Proyectos</div>
+            <div class="navbar-logo">Toral</div>
         </div>
         
         <div class="nav-right">
@@ -375,7 +375,7 @@
     </nav>
 
     <div class="hero">
-        <h1>Mis Proyectos Creativos</h1>
+        <h1>Mis proyectos</h1>
     </div>
 
     <div class="container" id="projects-container">
