--- a/Principal.html
+++ b/Principal.html
@@ -216,6 +216,7 @@
         .project-card {
             background: var(--card-bg);
             border-radius: 20px;
+            border-color: var(--text-color);
             padding: 1.5rem;
             backdrop-filter: blur(10px);
             box-shadow: 0 4px 6px rgba(0,0,0,0.05);
