--- a/pregunta.html
+++ b/pregunta.html
@@ -176,6 +176,8 @@
     <div class="container hidden" id="resumen">
         <h2>📊 Resultados Finales</h2>
         <p>Total de preguntas: <span id="totalPreguntas">0</span></p>
+        <p>Respuestas correctas: <span id="totalCorrectas">0</span></p> <!-- Nueva línea -->
+        <p>Respuestas incorrectas: <span id="totalIncorrectas">0</span></p> <!-- Nueva línea -->
         <p>Puntuación Final: <span id="totalPuntos">0</span> puntos</p>
         <div id="mensajeFelicidades" class="hidden"></div>
         <h3>Detalle de Respuestas</h3>
