--- a/pregunta.html
+++ b/pregunta.html
@@ -200,6 +200,55 @@
             color: white;
             pointer-events: none; /* Evita que el ícono interfiera con el clic */
         }
+        /* Estilos para móviles */
+@media (max-width: 768px) {
+    body {
+        padding: 10px;
+    }
+
+    .container {
+        padding: 1rem;
+        margin: 0.5rem;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .dificultad-select {
+        font-size: 0.9rem;
+        padding: 10px;
+    }
+
+    .btn {
+        width: 100%;
+        padding: 10px;
+        font-size: 1rem;
+    }
+
+    .option {
+        padding: 10px;
+        font-size: 0.9rem;
+    }
+
+    #tiempo {
+        font-size: 1rem;
+    }
+
+    #puntuacion {
+        font-size: 0.9rem;
+    }
+
+    .mensaje-felicidades {
+        padding: 15px;
+        font-size: 0.9rem;
+    }
+
+    .historial-item {
+        padding: 10px;
+        font-size: 0.9rem;
+    }
+}
     </style>
 </head>
 <body>
