--- a/pregunta.html
+++ b/pregunta.html
@@ -201,14 +201,16 @@
             pointer-events: none; /* Evita que el ícono interfiera con el clic */
         }
         /* Estilos para móviles */
+/* Estilos para móviles */
 @media (max-width: 768px) {
     body {
-        padding: 10px;
+        padding: 10px 15px; /* 10px arriba/abajo, 15px izquierda/derecha */
     }
 
     .container {
         padding: 1rem;
         margin: 0.5rem;
+        width: calc(100% - 30px); /* Ajusta el ancho para compensar el padding */
     }
 
     h1 {
