--- a/pregunta.html
+++ b/pregunta.html
@@ -258,9 +258,13 @@
     <h1>🧠 Quiz de Conocimientos</h1>
     <label for="area">Selecciona el área:</label>
     <select id="area" class="dificultad-select">
-        <option value="geografia">Geografía</option>
-        <option value="matematicas">Matemáticas</option>
-        <option value="ciencias">Ciencias</option>
+        <option value="bloque1">Bloque 1</option>
+        <option value="bloque2">Bloque 2</option>
+        <option value="bloque3">Bloque 3</option>
+        <option value="bloque4">Bloque 4</option>
+        <option value="bloque5">Bloque 5</option>
+        <option value="bloque6">Bloque 6</option>
+        <option value="bloque7">Bloque 7</option>
     </select>
     <label for="dificultad">Selecciona la dificultad:</label>
     <select id="dificultad" class="dificultad-select">
