--- a/pregunta.html
+++ b/pregunta.html
@@ -280,13 +280,13 @@
     <h1>🧠 Quiz de Conocimientos</h1>
     <label for="area">Selecciona el área:</label>
     <select id="area" class="dificultad-select">
-        <option value="bloque1">Bloque 1</option>
-        <option value="bloque2">Bloque 2</option>
-        <option value="bloque3">Bloque 3</option>
-        <option value="bloque4">Bloque 4</option>
-        <option value="bloque5">Bloque 5</option>
-        <option value="bloque6">Bloque 6</option>
-        <option value="bloque7">Bloque 7</option>
+        <option value="bloque1">Bloque 1️⃣</option>
+        <option value="bloque2">Bloque 2️⃣</option>
+        <option value="bloque3">Bloque 3️⃣</option>
+        <option value="bloque4">Bloque 4️⃣</option>
+        <option value="bloque5">Bloque 5️⃣</option>
+        <option value="bloque6">Bloque 6️⃣</option>
+        <option value="bloque7">Bloque 7️⃣</option>
     </select>
     <label for="dificultad">Selecciona la dificultad:</label>
     <select id="dificultad" class="dificultad-select">
