--- a/pregunta.html
+++ b/pregunta.html
@@ -280,7 +280,7 @@
     <h1>🧠 Quiz de Conocimientos</h1>
     <label for="area">Selecciona el área:</label>
     <select id="area" class="dificultad-select">
-        <option value="bloque1">Bloque 1️⃣</option>
+        <option value="bloque1">Bloque [1]</option>
         <option value="bloque2">Bloque 2️⃣</option>
         <option value="bloque3">Bloque 3️⃣</option>
         <option value="bloque4">Bloque 4️⃣</option>
