--- a/pregunta.html
+++ b/pregunta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz de Conocimientos Mejorado</title>
+    <title>Quiz de Conocimientos</title>
     <style>
         :root {
             --color-correcto: #28a745;
@@ -524,7 +524,7 @@ function finalizarJuego() {
                 <p>¡Excelente trabajo!</p>
             </div>
         `;
-    } else if (porcentajeAciertos >= 60) {
+    } else if (porcentajeAciertos >= 70) {
         mensajeHTML = `
             <div class="mensaje-aprobado">
                 <h3>👍 ¡Bien hecho! 👍</h3>
