--- a/GAFI40R.html
+++ b/GAFI40R.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAFI 40 - Memorización Interactiva Profesional</title>
+    <title>GAFI 40 - Flashcards interactivos</title>
     <style>
         :root {
             --primary: #4d6bfe;
