--- a/GAFI40R.html
+++ b/GAFI40R.html
@@ -298,13 +298,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>GAFI 40 - Memorización Interactiva</h1>
+            <h1>GAFI 40 Memorización Interactiva</h1>
             <p>Creado por Alejandro Toral 🚀</p>
         </div>
 
         <div class="controls">
-            <button class="primary-btn" onclick="shuffleCards()">🔀 Mezclar tarjetas</button>
-            <button class="primary-btn" onclick="resetProgress()">🔄 Reiniciar todo</button>
+            <button class="primary-btn" onclick="shuffleCards()">🔀 Mezclar</button>
+            <button class="primary-btn" onclick="resetProgress()">🔄 Reiniciar</button>
         </div>
 
         <div class="progress-container">
