Actualizar DivisasISO.html

--- a/DivisasISO.html
+++ b/DivisasISO.html
@@ -155,10 +155,10 @@
                 <tr><td>INGLATERRA</td><td>GBP</td><td>9</td></tr>
                 <tr><td>JAPON</td><td>JPY</td><td>10</td></tr>
                 <tr><td>CUBA CONVERTIBLE</td><td>CUP</td><td>11</td></tr>
-                <tr><td>MORRALLA AMERICANA</td><td>MOR_USD</td><td>12</td></tr>
-                <tr><td>MORRALLA CANADA</td><td>MOR_CAD</td><td>13</td></tr>
-                <tr><td>MORRALLA EURO</td><td>MOR_EUR</td><td>14</td></tr>
-                <tr><td>MORRALLA STERLINA</td><td>MOR_GBP</td><td>15</td></tr>
+                <tr><td>MORRALLA AMERICANA</td><td>M.USD</td><td>12</td></tr>
+                <tr><td>MORRALLA CANADA</td><td>M.CAD</td><td>13</td></tr>
+                <tr><td>MORRALLA EURO</td><td>M.EUR</td><td>14</td></tr>
+                <tr><td>MORRALLA STERLINA</td><td>M.GBP</td><td>15</td></tr>
                 <tr><td>PESOS ARGENTINOS</td><td>ARS</td><td>17</td></tr>
                 <tr><td>COLOMBIA</td><td>COP</td><td>18</td></tr>
                 <tr><td>BELICE</td><td>BZD</td><td>19</td></tr>
